# SeventhEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SeventhEngine.sln  SeventhEngine.vcxproj  changelog.txt  main.cpp  test.cpp  test.h  todo.txt
Audio/: Audio.vcxproj  CMakeLists.txt
Collision/: CMakeLists.txt  Collision.vcxproj
Core/: AllocatedObject.cpp  AllocatedObject.h  CMakeLists.txt  Clock.cpp  Clock.h  Common.h  Core.vcxproj  EngineComponent.h  EngineConfig.cpp  EngineConfig.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  EventListener.h  Game.cpp  Game.h  Listener.cpp  Listener.h  Logger.cpp  Logger.h  Platform.h  SeventhEngine.cpp  SeventhEngine.h  Singleton.h
Core/include/: AllocatedObject.h  Common.h  Core.h  EngineConfig.h  JSONParser.h  Logger.h  Platform.h  SeventhEngine.h  Singleton.h
Core/src/: AllocatedObject.cpp  Core.cpp  EngineConfig.cpp  JSONParser.cpp  Logger.cpp  SeventhEngine.cpp
Debugging/: Debugging.vcxproj  ReadMe.txt
Debugging/include/: Logger.h  Logging.h
Debugging/src/: Logger.cpp
Examples/: Examples.vcxproj
Examples/SimpleRendering/: AnotherScene.cpp  AnotherScene.h  CMakeLists.txt  Player.cpp  Player.h  SimpleRendering.cpp  SimpleRendering.h  SimpleRendering.vcxproj  SimpleScene.cpp  SimpleScene.h  engine.cfg  engine.ini  main.cpp
Examples/SimpleRendering/resources/: sample.xml
Examples/SimpleRendering/resources/maps/: test-map.tmx
Examples/SimpleRendering/src/: win_main.cpp
Examples/win32/: win_main.cpp
Gameplay/: Gameplay.vcxproj
Input/: CMakeLists.txt  Input.h  Input.vcxproj  InputManager.cpp  InputManager.h
Network/: Network.vcxproj
Physics/: Physics.vcxproj
Rendering/: CMakeLists.txt  Clock.cpp  Clock.h  Renderable.h  Rendering.cpp  Rendering.h  Rendering.vcxproj  RenderingResource.cpp  RenderingResource.h  Texture.cpp  Texture.h  TiledMap.cpp  TiledMap.h  Vector2.cpp  Vector2.h
ResourceManager/: CMakeLists.txt  PackNotFoundException.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.vcxproj  ResourceMap.cpp  ResourceMap.h  ResourceObject.cpp  ResourceObject.h  ResourcePack.cpp  ResourcePack.h  ResourceTexture.cpp  ResourceTexture.h
ResourceManager/src/: Resource.cpp  ResourceManager.cpp  ResourceObject.cpp  ResourcePack.cpp
SceneManager/: CMakeLists.txt  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneManager.vcxproj
SeventhEngine/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
Tests/: Tests.vcxproj
include/: common.h  events.h  exception.h  functors.h  math.h  resources.h  sth_math.h  texture_coord.h
include/AssetManager/: CAssetManager.h
include/DisplayCore/: CCamera.h  CCameraAttached.h  CCameraStatic.h  CDisplayCore.h  CLayer.h  CLayerManager.h  CMap.h  CTexture.h  CTextureManager.h
include/Engine/: CClock.h  CEngine.h  CEngineConfig.h
include/EntityCore/: CEntity.h  CEntityManager.h
include/EventsCore/: CEvent.h  CEventsCore.h
include/GameplayCore/: CGameplayCore.h  CState.h  CStateManager.h
include/Platform/windows/: trace.h
include/Rendering/: CAnimation.h  CMap.h  CMapManager.h  CRendering.h  CTexture.h  CTextureManager.h  CTile.h  CTileset.h  GLtexture.h
include/ResourceManager/: CMapCompiler.h  CResourceManager.h
src/DisplayCore/: CCamera.cpp  CCameraAttached.cpp  CCameraStatic.cpp  CDisplayCore.cpp  CLayer.cpp  CLayerManager.cpp  CMapManager.cpp  CTexture.cpp  CTextureManager.cpp  CTileset.cpp
src/Engine/: CClock.cpp  CEngine.cpp  CEngineConfig.cpp
src/EntityCore/: CEntity.cpp  CEntityManager.cpp
src/EventsCore/: CEventsCore.cpp
src/GameplayCore/: CGameplayCore.cpp  CState.cpp  CStateManager.cpp
src/Platform/windows/: trace.cpp
src/Rendering/: CAnimation.cpp  CMap.cpp  CMapManager.cpp  CRendering.cpp  CTexture.cpp  CTextureManager.cpp  CTile.cpp  CTileset.cpp  GLtexture.cpp
src/ResourceManager/: CMapCompiler.cpp  CResourceManager.cpp
test/: seventh.ini
